# ISAproject

./: CMakeLists.txt  Logo-FIT.eps  README.md  api.h  makefile  manual.tex  test.c  utils.h  xvarga14.tar  zdroj4.bib
client/: isaclient.c  isaclient.h
server/: isaserver.c  isaserver.h
